--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta charset="utf-8">
 	<!-- <base href="/"> -->
 
-	<title>Project</title>
-	<meta name="description" content="">
+	<title>Портфолио | Екатерина Кудрявцева | Web-master</title>
+	<meta name="description" content="Портфолио web-мастера Екатерины Кудрявцевой.">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -45,12 +45,12 @@
 				<div class="col-md-12">
 					<nav class="my-menu">
 						<ul>
-							<li><a href="#html" title="Pellentesque fermentum dolor">Html-вёрстка</a></li>
-							<li><a href="#graphic" title="Pellentesque fermentum dolor">Графика для сайтов</a></li>
-							<li><a href="#artiсle" title="Lorum ipsum dolor sit amet">Статьи</a></li>
-							<li><a href="#smm" title="Aliquam tincidunt mauris eu risus">Smm</a></li>
-							<li><a href="#description" title="Morbi in sem quis dui placerat ornare">Описание товаров</a></li>
-							<li class="scroll-active"><a href="#header"><button><i class="fas fa-home"></i></button></a></li>
+							<li><a href="#html" title="Html-вёрстка">Html-вёрстка</a></li>
+							<li><a href="#graphic" title=Графика для сайтов">Графика для сайтов</a></li>
+							<li><a href="#artiсle" title="Статьи">Статьи</a></li>
+							<li><a href="#smm" title="Smm">Smm</a></li>
+							<li><a href="#description" title="Описание товаров">Описание товаров</a></li>
+							<li class="scroll-active"><a href="#header" title="Главная"><button><i class="fas fa-home"></i></button></a></li>
 							<li class="scroll-active"><button class="btn-cont"><i class="fas fa-phone-volume"></i></button></li>
 						</ul>
 					</nav>
